rename to model/interface

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="container"></div>
   <script src="assets/js/bundle.min.js"></script>
   <footer class="footer">
-© powered by <a href="http://qiita.com/darai0512">darai0512</a>
+© powered by <a href="http://qiita.com/darai0512" target="_blank">darai0512</a>
 <!-- ga-beacon -->
   <a href="http://darai0512.github.io/AirPoker/index.html"><img src="https://ga-beacon.appspot.com/UA-74094673-3/darai0512.github.io/AirPoker/?pixel"/></a>
 </div>
