--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>AirPoker</title>
+  <!-- CDN -->
   <link href='http://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <body>
 <div id="wrapper">
   <a href="https://github.com/darai0512/AirPoker" class="git-label">
     <img src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png">
   </a>
-  <div id="container"></div>
+  <div id="app"></div>
   <script src="assets/js/bundle.min.js"></script>
   <footer class="footer">
 © powered by <a href="http://qiita.com/darai0512" target="_blank">darai0512</a>
